# contract-net-router

./: GOVERNANCE-STACK.md  README.md  REFERENCES.md  TOOLS.md  install.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: decision-matrix.md
examples/: agents.yaml  budget_conservation_demo.py  demo.py
src/contract_net_router/: __init__.py  __main__.py  contract.py  router.py
src/contract_net_router/adapters/: __init__.py  autogen_shim.py  base.py  crewai_executor.py  dspy_adapter.py  haystack_adapter.py  langgraph_adapter.py  llamaindex_adapter.py  openai_agents_adapter.py  semantic_kernel_adapter.py
tests/: test_adapters.py  test_router.py
